# -*- mode: org -*-
* v0.7.0    UNRELEASED

- Added optional ~replace~ argument to ~closql-insert~.  It non-nil, then
  this function uses ~INSERT OR REPLACE INTO~ is used instead of just
  ~INSERT INTO~, allowing the caller to replace an existing row.

* v0.6.0    2018/07/01

- Added new ~closql-object~ class slot ~closql-order-by~, which allows
  specify how the values of a related ~:closql-class~ slot are ordered.

- An initially unbound slot for which neither ~:closql-class~ nor
  ~:closql-columns~ is set caused an error in ~closql--resolve-slots~.

* v0.5.2    2018/05/21

- Fixed a bug that caused ~closql-insert~ to fail when using Emacs 25
  ever since Emacs 26 is supported too.

- Added new utility function ~closql-format~.

* v0.5.1    2017/12/19

- A recent change on Emacs 27.0.50 causes an EmacSQL bug to surface.
  That was fixed upstream and the dependency was bumped to bring in
  that fix.

* v0.5.0    2017/11/27

- Emacs 26.1 will use a new ~record~ type instead of vectors.
  Closql can now deal with both internal representations.

* v0.4.0    2017/09/19

- The value of a slot can now be a list of objects.  Like for a slot
  whose value is a list of lists, the elements have to be uniform, in
  this case they have to share a base-class, and they are unordered.

  Objects in such secondary tables can be queried directly, using the
  same functions that are used to query objects in the primary table.
  For secondary tables the new optional ~class~ argument of these query
  functions has to be provided.

  Note that ~oset~ currently does not support "list of objects" slots.

- Access information is now stored in slots of the object base class
  instead of in the database class.  This change was necessary to
  allow storing objects of different types in different tables.

  The names of all of these slots are prefixed with ~closql-~.  The
  existing slot ~database~ was renamed to ~closql-database~ and the slot